Fixed the vertical alignment issue in attachments

--- a/php/orangehrm/symfony/plugins/orangehrmRecruitmentPlugin/web/css/attachmentsPartial.css
+++ b/php/orangehrm/symfony/plugins/orangehrmRecruitmentPlugin/web/css/attachmentsPartial.css
@@ -73,3 +73,10 @@ input#btnCommentOnly {
     color:#888888;
     padding-left: 170px;
 }
+
+form#frmRecDelAttachments table.data-table td {
+    vertical-align: top;
+    padding-top: 5px;
+    padding-bottom: 3px;
+    height: 16px;
+}
